--- a/config/sync/node.type.localgov_directory.yml
+++ b/config/sync/node.type.localgov_directory.yml
@@ -1,7 +1,14 @@
 uuid: c596e916-ea3e-4b63-9af5-aa093f22a8ef
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - menu_ui
+third_party_settings:
+  menu_ui:
+    available_menus:
+      - main
+    parent: 'main:'
 _core:
   default_config_hash: '-LoEbQrvqOBYG1UMlsby5bRRe4nfZa3c6znjEohpYXw'
 name: 'Directory channel'
