--- a/config/sync/node.type.localgov_step_by_step_overview.yml
+++ b/config/sync/node.type.localgov_step_by_step_overview.yml
@@ -1,7 +1,14 @@
 uuid: 4fc9582b-6007-403b-9cfd-5b484431ba8f
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - menu_ui
+third_party_settings:
+  menu_ui:
+    available_menus:
+      - main
+    parent: 'main:'
 _core:
   default_config_hash: M_ZXJNEJhHSIAxjqQy1awRkKTY24vRXSdPDqXx0ouCE
 name: 'Step by step overview'
