--- a/config/sync/core.base_field_override.node.localgov_guides_page.revision_log.yml
+++ b/config/sync/core.base_field_override.node.localgov_guides_page.revision_log.yml
@@ -1,13 +1,13 @@
-uuid: 93c68b30-cdd9-498d-929f-9609c7856971
+uuid: bcca6bb0-7d89-498c-8a7b-bbb37707119e
 langcode: en
 status: true
 dependencies:
   config:
-    - node.type.traffic_regulation_order
-id: node.traffic_regulation_order.revision_log
+    - node.type.localgov_guides_page
+id: node.localgov_guides_page.revision_log
 field_name: revision_log
 entity_type: node
-bundle: traffic_regulation_order
+bundle: localgov_guides_page
 label: 'Revision log message'
 description: 'Briefly describe the changes you have made.'
 required: true
