--- a/config/sync/core.base_field_override.node.localgov_news_article.revision_log.yml
+++ b/config/sync/core.base_field_override.node.localgov_news_article.revision_log.yml
@@ -1,13 +1,13 @@
-uuid: 93c68b30-cdd9-498d-929f-9609c7856971
+uuid: fdb7b164-5d24-458d-a1d2-b3ce0d9f73a9
 langcode: en
 status: true
 dependencies:
   config:
-    - node.type.traffic_regulation_order
-id: node.traffic_regulation_order.revision_log
+    - node.type.localgov_news_article
+id: node.localgov_news_article.revision_log
 field_name: revision_log
 entity_type: node
-bundle: traffic_regulation_order
+bundle: localgov_news_article
 label: 'Revision log message'
 description: 'Briefly describe the changes you have made.'
 required: true
