--- a/config/sync/core.base_field_override.node.localgov_subsites_page.revision_log.yml
+++ b/config/sync/core.base_field_override.node.localgov_subsites_page.revision_log.yml
@@ -1,13 +1,13 @@
-uuid: 93c68b30-cdd9-498d-929f-9609c7856971
+uuid: 4c6791d4-7c4f-42b1-9bd1-db47155503db
 langcode: en
 status: true
 dependencies:
   config:
-    - node.type.traffic_regulation_order
-id: node.traffic_regulation_order.revision_log
+    - node.type.localgov_subsites_page
+id: node.localgov_subsites_page.revision_log
 field_name: revision_log
 entity_type: node
-bundle: traffic_regulation_order
+bundle: localgov_subsites_page
 label: 'Revision log message'
 description: 'Briefly describe the changes you have made.'
 required: true
